--- a/liste_courses/package.json
+++ b/liste_courses/package.json
@@ -6,9 +6,16 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "jest"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.26.9",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "vite": "^6.2.4"
+  },
+  "jest":{
+    "testEnvironment": "jsdom"
   }
 }
